# latentreasoning

./: .gitignore  README.md  pyproject.toml
docs/: PROPOSAL.md
results/: README.md  phase0_two_stream_medgemma.json  phase0_two_stream_medgemma.md
scripts/: audit_chexone.py  download_nih.py  phase0_two_stream.py  phase1_latent_block.py
src/latentreasoning/: __init__.py  cli.py
src/latentreasoning/core/: __init__.py  config.py  mock.py  model.py  types.py
src/latentreasoning/data/: __init__.py  chestxray14.py  occlusion.py
src/latentreasoning/grounding/: __init__.py  readout.py  two_stream.py
src/latentreasoning/latent/: __init__.py  block.py  splice.py
src/latentreasoning/models/: __init__.py  _base.py  chexone.py  medgemma.py
tests/: conftest.py  test_adapters_offline.py  test_chestxray14.py  test_latent_block.py  test_mock.py  test_occlusion.py  test_smoke.py  test_two_stream.py
